--- a/package.json
+++ b/package.json
@@ -3,27 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "npm run codegen",
     "dev": "next dev --turbopack",
+    "prebuild": "npm run codegen",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write app"
+    "format": "prettier --write app",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:watch": "npm run codegen -- --watch"
   },
   "dependencies": {
+    "@datocms/cda-client": "^0.2.6",
+    "dotenv": "^16.4.7",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-datocms": "^7.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/client-preset": "4.6.3",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@parcel/watcher": "^2.5.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "prettier": "^3.5.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
