--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
+    "html-react-parser": "^5.2.2",
+    "jsdom": "^26.0.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-datocms": "^7.1.0",
@@ -29,6 +31,7 @@
     "@graphql-codegen/client-preset": "4.6.3",
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@parcel/watcher": "^2.5.1",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
